--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "seed": "medusa seed -f ./data/seed.json",
     "build": "babel src -d dist --extensions \".ts,.js\"",
-    "start": "medusa start"
+    "start": "medusa migrations run && medusa start"
   },
   "dependencies": {
     "@medusajs/medusa": "^1.3.4",
@@ -30,8 +30,5 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.14.5",
     "babel-preset-medusa-package": "^1.1.19"
-  },
-  "engines": {
-    "node": "16.x"
   }
 }
